--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,157 @@
-.App {
-  text-align: center;
+body {
+  padding-top: 80px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.fixed-top {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #f2f2f2;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-link {
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#hero {
+  background-color: #495E57;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#hero .container {
+  padding-top: 50px;
+  padding-bottom: 15px;
+  min-height: 400px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+@media (min-width: 576px) { 
+  #hero .img-holder {
+      position: relative;
+      margin: 10px auto;
   }
-  to {
-    transform: rotate(360deg);
+
+  #hero .img-holder img {
+      right: 0;
+      height: 400px;
+      position: absolute;
+      margin-bottom: -50px
+  }
+
+  main {
+      margin-top: 100px;
   }
 }
+
+.cat-primary {
+  background-color: #F4CE14;
+  border-color: #F4CE14;
+  color: #ffffff;
+}
+
+.cat-primary:hover {
+  background-color: #F4CE14;
+  border-color: #F4CE14;
+  color: rgb(0,0,0);
+}
+
+#special {
+  margin-top: 80px;
+}
+
+#special .cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#special .card {
+  margin: 10px;
+  border-radius: 15px 15px 0 0;
+  overflow: hidden;
+  padding: 0;
+  flex: 1 1 calc(33.333% - 20px);
+}
+
+
+#special .img-cap {
+  margin: 0;
+}
+
+#special .img-cap img {
+  width: 100%;
+  height: auto;
+}
+
+#special .card .content {
+  padding: 25px;
+}
+
+@media (max-width: 576px) {
+  #special .card {
+      flex: 1 1 100%;
+  }
+}
+
+
+#special .card .img-cap {
+  height: 180px;
+  overflow: hidden;
+}
+
+#special .card .price {
+  font-weight: bold;
+  color: #EE9972;
+}
+
+
+#testimonials {
+  background-color: #e2e2e2;
+}
+
+#testimonials .container {
+  padding: 100px 0;
+}
+
+#testimonials > .container > .title {
+  margin: 80px auto;
+  text-align: center;
+}
+
+#testimonials .row  article {
+  padding: 25px;
+  background: #cccccc;;
+}
+
+#about .row {
+  margin: 45px auto;
+}
+
+
+#about .images {
+  position: relative;
+  min-height: 300px;
+  overflow: hidden;
+}
+
+#about .images img {
+  position: absolute;
+  width: 300px;
+}
+
+#about .images img:first-child{
+  z-index: 100;
+}
+
+#about .images img:last-child {
+  left: 30%;
+  top: 30px;
+  z-index: 200;
+  box-shadow: -5px 10px 15px rgba(0, 0, 0, 0.5);
+}
+
+#footer {
+  background-color: #cccccc;
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
